<resources>
    <string name="app_name">Merchandise Allocation</string>
    <string name="artNo">Art #</string>
    <string name="artName">Art Name</string>
    <string name="artNoDummy">MB123</string>
    <string name="artNameDummy">ART NAME</string>
    <string name="collection">Collection</string>
    <string name="collectionName">COLLECTION</string>
    <string name="beg">Beg</string>
    <string name="end">End</string>
    <string name="from">From</string>
    <string name="fromDummy">Grand Indonesia</string>
    <string name="fromBegDummy">36</string>
    <string name="fromEndDummy">24</string>
    <string name="to">To</string>
    <string name="toDummy">Plaza Semanggi</string>
    <string name="toBegDummy">1</string>
    <string name="toEndDummy">13</string>
    <string name="weeks"># Weeks</string>
    <string name="weeksDummy">4</string>
    <string name="sellthru">% Sell Thru</string>
    <string name="sellthruDummy">20</string>
    <string name="retailPrice">Retail Price</string>
    <string name="retailPriceDummy">379,900</string>
    <string name="disc">% Discount</string>
    <string name="discDummy">20</string>
    <string name="size">Size</string>
    <string name="beginning">Beginning</string>
    <string name="size1">S</string>
    <string name="size2">M</string>
    <string name="size3">L</string>
    <string name="size4">XL</string>
    <string name="size5">XXL</string>
    <string name="total">Total</string>
    <string name="fromBeginSize1Dummy">6</string>
    <string name="fromBeginSize2Dummy">12</string>
    <string name="fromBeginSize3Dummy">10</string>
    <string name="fromBeginSize4Dummy">6</string>
    <string name="fromBeginSize5Dummy">2</string>
    <string name="fromBeginTotalDummy">36</string>
    <string name="toBeginSize1Dummy">0</string>
    <string name="toBeginSize2Dummy">0</string>
    <string name="toBeginSize3Dummy">1</string>
    <string name="toBeginSize4Dummy">0</string>
    <string name="toBeginSize5Dummy">0</string>
    <string name="toBeginTotalDummy">1</string>
    <string name="suggestion">Suggestion</string>
    <string name="suggestSize1Dummy">1</string>
    <string name="suggestSize2Dummy">2</string>
    <string name="suggestSize3Dummy">3</string>
    <string name="suggestSize4Dummy">1</string>
    <string name="suggestSize5Dummy">1</string>
    <string name="suggestTotalDummy">8</string>
    <string name="ending">Ending</string>
    <string name="fromEndSize1Dummy">5</string>
    <string name="fromEndSize2Dummy">10</string>
    <string name="fromEndSize3Dummy">7</string>
    <string name="fromEndSize4Dummy">5</string>
    <string name="fromEndSize5Dummy">1</string>
    <string name="fromEndTotalDummy">28</string>
    <string name="toEndSize1Dummy">1</string>
    <string name="toEndSize2Dummy">2</string>
    <string name="toEndSize3Dummy">4</string>
    <string name="toEndSize4Dummy">1</string>
    <string name="toEndSize5Dummy">1</string>
    <string name="toEndTotalDummy">9</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="pleaseWait">Please wait a moment. This process may take a few minutes to complete.</string>
    <string name="errorMsg">Oops, there is something wrong. Please try swiping down to refresh the page.</string>
    <string name="noData">There is no data found. Please try swiping down to refresh the page.</string>
    <string name="loading">Loading consolidation data</string>
    <string name="settings">Setting</string>
    <string name="selectAll">Select All</string>
    <string name="deselectAll">Deselect All</string>
    <string name="dataCount">Data Count: </string>
</resources>
