<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/listConsolidation"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/listConsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="6dp"
            android:paddingRight="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="6dp">

                <com.beone_solution.stockconsolidation.widget.RobotoBoldTextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/artNo"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/artno"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.beone_solution.stockconsolidation.widget.RobotoBoldTextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/artName"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/artname"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp">

                    <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:layout_weight="2"/>

                    <com.beone_solution.stockconsolidation.widget.RobotoBoldTextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:text="@string/beg"
                        android:layout_weight="1"/>

                    <com.beone_solution.stockconsolidation.widget.RobotoBoldTextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:text="@string/end"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.beone_solution.stockconsolidation.widget.RobotoBoldTextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/from"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/fromwhs"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_weight="2"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/frombeg"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_weight="1"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/fromend"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.beone_solution.stockconsolidation.widget.RobotoBoldTextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/to"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/towhs"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_weight="2"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/tobeg"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_weight="1"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/toend"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"/>

    <ImageView
        android:id="@+id/vertical_separator"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:src="@drawable/underline"
        android:tint="#C0C0C0"/>

</LinearLayout>
