<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/listConsolidation"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
            android:paddingTop="4dp"
            android:id="@+id/dtl_size"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:text="@string/size"
            android:textAlignment="center"/>

        <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
            android:paddingTop="4dp"
            android:id="@+id/dtl_from_beg"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:text="@string/from"
            android:textAlignment="center"/>

        <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
            android:paddingTop="4dp"
            android:id="@+id/dtl_to_beg"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:text="@string/to"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="-6dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dtl_suggestion"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:layout_weight="1"
                android:background="@drawable/background"/>

        </android.support.design.widget.TextInputLayout>

        <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
            android:paddingTop="4dp"
            android:id="@+id/dtl_from_end"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:text="@string/from"
            android:textAlignment="center"/>

        <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
            android:paddingTop="4dp"
            android:id="@+id/dtl_to_end"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:text="@string/to"
            android:textAlignment="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"/>

    <ImageView
        android:id="@+id/vertical_separator"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:src="@drawable/underline"
        android:tint="#C0C0C0"/>

</LinearLayout>
