<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context="com.beone_solution.stockconsolidation.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:elevation="2dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>

            </android.support.v7.widget.Toolbar>

            <com.miguelcatalan.materialsearchview.MaterialSearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialSearchViewStyle"/>

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/layout_error"/>
            <include layout="@layout/layout_loading"/>

            <LinearLayout
                android:id="@+id/linearCheckAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginBottom="6dp"
                    android:buttonTint="@color/colorWhite"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/checkAllText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/selectAll"
                    android:textColor="@color/colorWhite"/>

                <com.beone_solution.stockconsolidation.widget.RobotoRegularTextView
                    android:id="@+id/dataCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/dataCount"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="viewEnd"/>

            </LinearLayout>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/mSwipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listconsolidationrecycleview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"/>

            </android.support.v4.widget.SwipeRefreshLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btApprove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/approve"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
